# PitchPress

./: CMakeLists.txt  compile_commands.json  makefile
.cache/clangd/index/: audio_device.h.28EA0B7C24BC9CD6.idx  audio_device_manager.cpp.CA9379A6C7973914.idx  audio_device_manager.h.9F6A7C0252BB91E0.idx  main.cpp.1E94DF1C001BED9F.idx  microphone_test.cpp.519D492A4CF18268.idx  portaudio_utils.h.35E8EE7EE0B588E4.idx
app/: CMakeLists.txt  main.cpp
cmake/: Packages.cmake
configured/: CMakeLists.txt  config.hpp.in
src/input/managers/: CMakeLists.txt  audio_device_manager.cpp
src/input/managers/include/: audio_device.h  audio_device_manager.h  portaudio_utils.h
tests/: CMakeLists.txt
